# deterministic-extraction

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml  requirements.txt  run_api.py
cli/: cleanup_old_data.sh  quick_test.py  requirements-cli.txt
docs/: API.md  CONFIGURATION.md
src/backend/: __init__.py
src/backend/config/: __init__.py  settings.py  units.yaml
src/backend/core/: __init__.py  models.py  pipeline.py  security.py  utils.py
src/backend/llm/: __init__.py  async_extractor.py  client.py  multipass_extractor.py
src/backend/pdf/: __init__.py  table_cropper.py  toc_analyzer.py
src/backend/serializers/: __init__.py  base.py  factory.py  json_serializer.py
src/web/: __init__.py  dependencies.py  main.py
src/web/common/: __init__.py  exceptions.py
src/web/core/: __init__.py  database.py
src/web/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
src/web/frontend/public/: README.md
src/web/jobs/: __init__.py  schemas.py  service.py
src/web/routes/: __init__.py  jobs.py  progress.py  storage.py  upload.py
src/web/services/: __init__.py  processor.py  progress_manager.py  worker.py
src/web/storage/: __init__.py  cleanup.py  config.py  exceptions.py  manager.py  service.py
tests/: __init__.py  conftest.py
tests/backend/llm/: conftest.py  test_multipass_extractor.py
tests/validation/: test_llm_function_calling.py
tests/web/: __init__.py  test_processor.py  test_stage3_integration.py  test_storage.py  test_storage_integration.py  test_worker_integration.py
(+39 files in other folders)
