[project]
name = "document-processor"
version = "1.0.0"
description = "Batch document processing framework with LLM-powered extraction"
requires-python = ">=3.10"
dependencies = [
    "pymupdf==1.26.4",
    "pdfplumber==0.11.7",
    "lxml==6.0.1",
    "pydantic==2.11.1",
    "python-dotenv==1.1.1",
    "openai==1.102.0",
    "anthropic==0.64.0",
    "rich==14.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-asyncio==0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "web"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
